--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -15,7 +15,8 @@
   doi          = {10.1109/CVPR52734.2025.02411},
   timestamp    = {Wed, 20 Aug 2025 10:18:56 +0200},
   biburl       = {https://dblp.org/rec/conf/cvpr/AntonyPLKB25.bib},
-  bibsource    = {dblp computer science bibliography, https://dblp.org}
+  bibsource    = {dblp computer science bibliography, https://dblp.org},
+  selected     = {true}
 }
 
 @inproceedings{DBLP:conf/iclr/KannanBKW25,
@@ -32,7 +33,8 @@
   url          = {https://openreview.net/forum?id=90DC0IvlSs},
   timestamp    = {Thu, 15 May 2025 01:00:00 +0200},
   biburl       = {https://dblp.org/rec/conf/iclr/KannanBKW25.bib},
-  bibsource    = {dblp computer science bibliography, https://dblp.org}
+  bibsource    = {dblp computer science bibliography, https://dblp.org},
+  selected     = {true}
 }
 
 @article{DBLP:journals/corr/abs-2507-22786,
@@ -50,7 +52,8 @@
   eprint       = {2507.22786},
   timestamp    = {Sat, 06 Sep 2025 01:00:00 +0200},
   biburl       = {https://dblp.org/rec/journals/corr/abs-2507-22786.bib},
-  bibsource    = {dblp computer science bibliography, https://dblp.org}
+  bibsource    = {dblp computer science bibliography, https://dblp.org},
+  selected     = {true}
 }
 
 @article{DBLP:journals/corr/abs-2508-19548,
@@ -69,7 +72,8 @@
   eprint       = {2508.19548},
   timestamp    = {Mon, 22 Sep 2025 01:00:00 +0200},
   biburl       = {https://dblp.org/rec/journals/corr/abs-2508-19548.bib},
-  bibsource    = {dblp computer science bibliography, https://dblp.org}
+  bibsource    = {dblp computer science bibliography, https://dblp.org},
+  selected     = {true}
 }
 
 @inproceedings{DBLP:conf/aistats/MurtiKB24,
@@ -114,7 +118,8 @@
   doi          = {10.4230/LIPICS.ICALP.2024.25},
   timestamp    = {Wed, 21 Aug 2024 22:46:00 +0200},
   biburl       = {https://dblp.org/rec/conf/icalp/BhattacharyyaK024.bib},
-  bibsource    = {dblp computer science bibliography, https://dblp.org}
+  bibsource    = {dblp computer science bibliography, https://dblp.org},
+  selected     = {true}
 }
 
 @inproceedings{DBLP:conf/nips/MurtiB24,
@@ -135,7 +140,8 @@
   url          = {http://papers.nips.cc/paper\_files/paper/2024/hash/54801e196796134a2b0ae5e8adef502f-Abstract-Conference.html},
   timestamp    = {Thu, 13 Feb 2025 00:00:00 +0100},
   biburl       = {https://dblp.org/rec/conf/nips/MurtiB24.bib},
-  bibsource    = {dblp computer science bibliography, https://dblp.org}
+  bibsource    = {dblp computer science bibliography, https://dblp.org},
+  selected     = {true}
 }
 
 @inproceedings{DBLP:conf/nips/WannerLBDG24,
